@@ -507,7 +507,7 @@ WebInspector.Resource.prototype = {
         // Otherwise, we flood the Console with too many tips.
         /*
         var msg = new WebInspector.ConsoleMessage(WebInspector.ConsoleMessage.MessageSource.Other,
-                    WebInspector.ConsoleMessage.MessageLevel.Tip, -1, this.url, tip.message);
+                    WebInspector.ConsoleMessage.MessageLevel.Tip, -1, this.url, null, tip.message);
         WebInspector.console.addMessage(msg);
         */
     },
@@ -567,7 +567,7 @@ WebInspector.Resource.prototype = {
             case WebInspector.Warnings.IncorrectMIMEType.id:
                 if (!this._mimeTypeIsConsistentWithType())
                     msg = new WebInspector.ConsoleMessage(WebInspector.ConsoleMessage.MessageSource.Other,
-                                WebInspector.ConsoleMessage.MessageLevel.Warning, -1, this.url,
+                                WebInspector.ConsoleMessage.MessageLevel.Warning, -1, this.url, null,
                                 String.sprintf(WebInspector.Warnings.IncorrectMIMEType.message,
                                     WebInspector.Resource.Type.toString(this.type), this.mimeType));
                 break;
